# Image_filter

./: CMakeLists.txt
header/: errors_list.h  file.h  header.h  image.h  stat.h  utils.h
src/: file.c  file.h  header.c  image.c  index.c  pixel_transform.asm  utils.c
